--- a/Journal/Journal/Base.lproj/Main.storyboard
+++ b/Journal/Journal/Base.lproj/Main.storyboard
@@ -72,7 +72,9 @@
                                     </constraints>
                                 </tableViewCellContentView>
                                 <connections>
-                                    <segue destination="MQb-F5-t4K" kind="push" identifier="ViewJournalSegue" id="ydn-mm-OuH"/>
+                                    <outlet property="bodyLabel" destination="ziN-oA-zwo" id="LWv-YX-WJp"/>
+                                    <outlet property="timestampLabel" destination="JNE-rf-BBv" id="xMO-Jp-iR2"/>
+                                    <outlet property="titleLabel" destination="6Oq-vH-TFB" id="0aA-cq-zOi"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -88,24 +90,46 @@
                             </connections>
                         </barButtonItem>
                     </navigationItem>
-                    <connections>
-                        <outlet property="bodyLabel" destination="ziN-oA-zwo" id="jOv-kF-Qn2"/>
-                        <outlet property="timestampLabel" destination="JNE-rf-BBv" id="x8C-3x-EXJ"/>
-                        <outlet property="titleLabel" destination="JNE-rf-BBv" id="Vdl-ke-sn6"/>
-                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="mba-KY-aly" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="286.95652173913044" y="150.66964285714286"/>
         </scene>
-        <!--View Controller-->
+        <!--Entry Detail View Controller-->
         <scene sceneID="gzJ-cb-uzw">
             <objects>
-                <viewController id="MQb-F5-t4K" sceneMemberID="viewController">
+                <viewController id="MQb-F5-t4K" customClass="EntryDetailViewController" customModule="Journal" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="o0P-6c-2yH">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <subviews>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter a title here." textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="xn4-tW-yx0">
+                                <rect key="frame" x="20" y="148" width="374" height="30"/>
+                                <color key="backgroundColor" red="0.9510807966" green="0.9510807966" blue="0.9510807966" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="nkx-Kn-Lkk">
+                                <rect key="frame" x="20" y="198" width="374" height="220"/>
+                                <color key="backgroundColor" red="0.9510807966" green="0.9510807966" blue="0.9510807966" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="nkx-Kn-Lkk" secondAttribute="height" multiplier="17:10" id="7YM-wu-HFm"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                        </subviews>
+                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="xn4-tW-yx0" firstAttribute="trailing" secondItem="nkx-Kn-Lkk" secondAttribute="trailing" id="4d9-Hk-rgu"/>
+                            <constraint firstItem="cWP-ln-xMH" firstAttribute="trailing" secondItem="nkx-Kn-Lkk" secondAttribute="trailing" constant="20" id="AVb-M3-F7B"/>
+                            <constraint firstItem="nkx-Kn-Lkk" firstAttribute="top" secondItem="xn4-tW-yx0" secondAttribute="bottom" constant="20" id="CQC-5h-Nzj"/>
+                            <constraint firstItem="nkx-Kn-Lkk" firstAttribute="leading" secondItem="cWP-ln-xMH" secondAttribute="leading" constant="20" id="MME-eq-oCB"/>
+                            <constraint firstItem="xn4-tW-yx0" firstAttribute="leading" secondItem="nkx-Kn-Lkk" secondAttribute="leading" id="W5G-Kn-UfU"/>
+                            <constraint firstItem="xn4-tW-yx0" firstAttribute="top" secondItem="cWP-ln-xMH" secondAttribute="top" constant="8" id="k2G-yp-Q1a"/>
+                            <constraint firstItem="nkx-Kn-Lkk" firstAttribute="centerX" secondItem="o0P-6c-2yH" secondAttribute="centerX" id="tCF-ba-AtS"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="cWP-ln-xMH"/>
                     </view>
                     <navigationItem key="navigationItem" id="4XL-ku-cTd">
@@ -114,7 +138,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="9mI-aQ-9Lq" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1094" y="157"/>
+            <point key="canvasLocation" x="1092.753623188406" y="156.69642857142856"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="jHv-vb-KZk">
@@ -135,7 +159,4 @@
             <point key="canvasLocation" x="-623.1884057971015" y="150.66964285714286"/>
         </scene>
     </scenes>
-    <inferredMetricsTieBreakers>
-        <segue reference="vMc-wj-KBX"/>
-    </inferredMetricsTieBreakers>
 </document>
