--- a/JournalCoreData/JournalCoreData/Base.lproj/Main.storyboard
+++ b/JournalCoreData/JournalCoreData/Base.lproj/Main.storyboard
@@ -17,7 +17,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="TT5-cn-mGC">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="TT5-cn-mGC" customClass="EntryTableViewCell" customModule="JournalCoreData" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="28" width="414" height="43.5"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="TT5-cn-mGC" id="Pgh-Rr-TT8">
@@ -61,6 +61,9 @@
                                     </constraints>
                                 </tableViewCellContentView>
                                 <connections>
+                                    <outlet property="bodyTextLabel" destination="o8V-ea-cjy" id="Nph-bg-guH"/>
+                                    <outlet property="entryTitleLabel" destination="vpM-he-b73" id="xdv-py-kkv"/>
+                                    <outlet property="timeStampLabel" destination="fJz-NR-zOi" id="jCY-qn-pOj"/>
                                     <segue destination="gXY-96-NQx" kind="show" identifier="JournalDetailSegue" id="Fdl-Jd-aWe"/>
                                 </connections>
                             </tableViewCell>
@@ -82,21 +85,60 @@
             </objects>
             <point key="canvasLocation" x="1205.7971014492755" y="41.517857142857139"/>
         </scene>
-        <!--View Controller-->
+        <!--Entry Detail View Controller-->
         <scene sceneID="UgF-Ox-7gW">
             <objects>
-                <viewController id="gXY-96-NQx" sceneMemberID="viewController">
+                <viewController id="gXY-96-NQx" customClass="EntryDetailViewController" customModule="JournalCoreData" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="cEW-fN-sHe">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter a title" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="dKi-jM-KIf">
+                                <rect key="frame" x="20" y="118" width="374" height="34"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                                <connections>
+                                    <action selector="titleTextField:" destination="cMt-wy-cXu" eventType="editingDidEnd" id="Yp2-Sj-BkD"/>
+                                </connections>
+                            </textField>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="CHj-Nv-LMh">
+                                <rect key="frame" x="20" y="172" width="374" height="280"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="280" id="aZZ-8B-ZfY"/>
+                                </constraints>
+                                <color key="textColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemGrayColor" red="0.55686274509803924" green="0.55686274509803924" blue="0.57647058823529407" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="2xg-xS-bbP" firstAttribute="trailing" secondItem="CHj-Nv-LMh" secondAttribute="trailing" constant="20" id="BSr-Lm-CF1"/>
+                            <constraint firstItem="CHj-Nv-LMh" firstAttribute="top" secondItem="dKi-jM-KIf" secondAttribute="bottom" constant="20" id="ctZ-Jz-DAY"/>
+                            <constraint firstItem="dKi-jM-KIf" firstAttribute="leading" secondItem="2xg-xS-bbP" secondAttribute="leading" constant="20" id="kEB-WM-CXx"/>
+                            <constraint firstItem="CHj-Nv-LMh" firstAttribute="leading" secondItem="2xg-xS-bbP" secondAttribute="leading" constant="20" id="teg-iC-T2d"/>
+                            <constraint firstItem="dKi-jM-KIf" firstAttribute="top" secondItem="2xg-xS-bbP" secondAttribute="top" constant="30" id="xKI-tz-EAe"/>
+                            <constraint firstItem="2xg-xS-bbP" firstAttribute="trailing" secondItem="dKi-jM-KIf" secondAttribute="trailing" constant="20" id="yvN-tu-KDL"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="2xg-xS-bbP"/>
                     </view>
-                    <navigationItem key="navigationItem" id="bcn-vT-t6Y"/>
+                    <navigationItem key="navigationItem" id="bcn-vT-t6Y">
+                        <barButtonItem key="rightBarButtonItem" systemItem="save" id="QUb-UV-DAl">
+                            <connections>
+                                <action selector="saveButtonTapped:" destination="gXY-96-NQx" id="YkE-sL-kvR"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="entryTextView" destination="CHj-Nv-LMh" id="mH6-6L-E97"/>
+                        <outlet property="titleTextField" destination="dKi-jM-KIf" id="3Fx-kd-xVh"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="I9S-3Z-qT1" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <exit id="cMt-wy-cXu" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="2142" y="42"/>
+            <point key="canvasLocation" x="2140.5797101449275" y="41.517857142857139"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="G8u-KW-z8A">
